--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,11 @@
 /* Style for icons beside the certificates */
 .accomplishment-icon {
-    height: 24px;           /* Set the icon height */
-    width: auto;            /* Ensure the width is auto-scaled */
-    vertical-align: middle; /* Align the icon vertically */
-    margin-right: 10px;     /* Space between the icon and text */
+    max-width: 60px;
+    height: auto;
+    vertical-align: middle;
+    margin-right: 12px;
+    display: inline-block;
+    position: relative;
+    top: 4px; /* fine-tune vertical alignment */
   }
+  
