--- a/themes/academia-hugo/layouts/partials/widgets/about.html
+++ b/themes/academia-hugo/layouts/partials/widgets/about.html
@@ -15,11 +15,11 @@
 {{end}}
 {{ $person := $person_page.Params }}
 
-<!-- DEBUG -->
+<!-- DEBUG
 <p>Author slug: {{ $author }}</p>
 <p>Person page path: {{ $person_page_path }}</p>
 <p>Person found: {{ if $person_page }}Yes{{ else }}No{{ end }}</p>
-<p>Person name: {{ $person.name }}</p>
+<p>Person name: {{ $person.name }}</p> -->
 
 <!-- About widget -->
 <div class="row" itemprop="author" itemscope itemtype="http://schema.org/Person"
