--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -63,7 +63,7 @@
 
         {{ range $person.btn }}
         <a href="{{ .url | urlize | relURL}}" class="btn btn-primary btn-lg">
-            <i class="fas fa-download mr-2" aria-hidden="true"></i>{{ .label }}
+            {{ .label }}
         </a>
         {{ end }}
 
